Quorum3/Library/Tests/TypeChecker/Pass/TextGetCharacter.quorum
class Main
    action Main
        Text t 
        t:SetValue("hello")
        text p = "hello"

        output t:GetCharacter(4)
        output p:GetCharacter(4)
    end
end